2008-10-01  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.GtkCore/GtkDesignInfo.cs,
	  MonoDevelop.GtkCore/ProjectResourceProvider.cs,
	  MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs: Track API.

2008-09-23  Mike Kestner <mkestner@novell.com> 

	* MonoDevelop.GtkCore.GuiBuilder/CombinedDesignView.cs: bandaid to
	avoid exceptions when removing non-existent buttons.  Fixes #377414.

2008-09-23  Mike Kestner <mkestner@novell.com> 

	* lib/stetic/libsteticui/CecilWidgetLibrary.cs: don't hold assembly
	reference beyond load operation.  Recreate it on each load so we are
	always accessing the current assembly instance.  Only access cache 
	using filename.  Ensure Class description lookups cause spew to 
	console.
	* lib/stetic/libsteticui/LibraryCache.cs: enhance the path lookup
	logic in Refresh to avoid some churn on named lookups.
	* lib/stetic/libsteticui/ProjectBackend.cs: reload library if 
	necessary before getting component types.  Fixes #427334.

2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.GtkCore.mdp: Updated projects.

2008-09-15  Mike Kestner <mkestner@novell.com> 

	* MonoDevelop.GtkCode.GuiBuilder/GtkProjectServiceExtension.cs:
	add the project stetic file to any generation warnings produced.
	Fixes #373244.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* lib/libsteticui.mdp, lib/libstetic.mdp, lib/gtk-gui/generated.cs,
	  gtk-gui/generated.cs: Updated generated code.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.GtkCore.GuiBuilder/ActionGroupDisplayBinding.cs,
	  MonoDevelop.GtkCore.GuiBuilder/CodeBinder.cs,
	  MonoDevelop.GtkCore.GuiBuilder/GuiBuilderProject.cs,
	  MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs,
	  MonoDevelop.GtkCore.GuiBuilder/GuiBuilderWindow.cs,
	  MonoDevelop.GtkCore/WidgetFileDescriptionTemplate.cs,
	  MonoDevelop.GtkCore/WidgetParser.cs: Track api changes.

2008-09-11  Mike Krüger <mkrueger@novell.com> 
